--- a/rs-technology-website/src/App.css
+++ b/rs-technology-website/src/App.css
@@ -10422,3 +10422,18 @@ ul.custom-list {
 .testimonial-carousel .carousel-indicators {
   top: 105%;
 }
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color: #373737;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #373737;
+}
+.my-float{
+	margin-top:22px;
+}
