--- a/rs-technology-website/src/assets/styles/style.css
+++ b/rs-technology-website/src/assets/styles/style.css
@@ -334,3 +334,27 @@ body { background: #FFF; font-family: 'Oswald', sans-serif; font-size: 14px; fon
   .bg-black {
     background-color: #000000;
   }
+  .float .tooltiptext {
+    visibility: visible;
+    width: 140px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 15px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    right: 113%;
+  }
+  
+  .float .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent black;
+  }
